[gd_scene load_steps=7 format=3 uid="uid://55gdbgimfbvk"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_08da0"]
[ext_resource type="PackedScene" uid="uid://b4sl771iccapw" path="res://scenes/block.tscn" id="2_cr6gh"]
[ext_resource type="PackedScene" uid="uid://d1p1bdcb4oqog" path="res://scenes/ball.tscn" id="3_nvyhm"]
[ext_resource type="PackedScene" uid="uid://dd6r04buxxtfc" path="res://scenes/ui.tscn" id="4_tyu2r"]
[ext_resource type="PackedScene" uid="uid://dh3bdnsejlo0c" path="res://scenes/Level1.tscn" id="5_7qtve"]
[ext_resource type="PackedScene" uid="uid://c03mkkbkoy4sh" path="res://scenes/pause_menu.tscn" id="6_uw8xt"]

[node name="Main" type="Node2D"]
script = ExtResource("1_08da0")

[node name="Player" type="Node2D" parent="."]
position = Vector2(448, 696)

[node name="Block" parent="Player" instance=ExtResource("2_cr6gh")]
is_player = true

[node name="Ball" parent="." instance=ExtResource("3_nvyhm")]
position = Vector2(512, 664)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="LowerRight" type="Node2D" parent="."]
position = Vector2(1024, 768)

[node name="TopLeft" type="Node2D" parent="."]
position = Vector2(0, 64)

[node name="UI" parent="." instance=ExtResource("4_tyu2r")]

[node name="PauseMenu" parent="UI" instance=ExtResource("6_uw8xt")]

[node name="Level1" parent="." instance=ExtResource("5_7qtve")]

[connection signal="quit" from="UI/PauseMenu" to="." method="_on_pause_menu_quit"]
